resized projects window on mobile, fixed coloring on mobile

--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -38,6 +38,7 @@
     height: 5vw;
     cursor: pointer;
     margin: 5% 0% 0% 0%;
+    color: black; 
 }
 
 #about-btn:hover {
