--- a/src/Components/Projects/ProjectComponents/ProjectCard.css
+++ b/src/Components/Projects/ProjectComponents/ProjectCard.css
@@ -31,6 +31,6 @@
     }
 
     .project-image {
-        height: 70vw;
+        height: 55vw;
     }
 }
