--- a/src/Components/Projects/ProjectComponents/ProjectsHeader.css
+++ b/src/Components/Projects/ProjectComponents/ProjectsHeader.css
@@ -38,6 +38,6 @@
     }
     #contacts-btn {
         height: 20vw;
-        font-size: 5vw !important;  
+        font-size: 4vw !important;  
     }
 }
